frontend/assets/styles/global.css
html {
  font-family: 'Montserrat', sans-serif;
  color: #1C1C1E;
}

a, a:hover {
  color: #0F766E
}

em {
  color: #1C1C1E;
}

#category {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
}

#title {
  letter-spacing: .4px;
  font-size: 22px;
  font-size: 1.375rem;
  line-height: 1.13636;
}

#banner {
  margin: 20px;
  height: 800px;
}

#editor {
  font-size: 16px;
  font-size: 1rem;
  line-height: 1.75;
}

.uk-navbar-container {
  background: #fff !important;
  font-family: 'Montserrat', sans-serif;
}

